# employee-management-system-office-

./: README.md  package-lock.json  package.json  schema.sql
backend/: .env  database.json  migrate.js  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/scripts/: bulk_seed_employees.js  migrate_heartbeat_columns.js  patch_db_heartbeat.js
backend/src/: server.ts
backend/src/config/: 019_productivity_analytics_views.sql  cloudinary.ts  db.ts  swagger.ts  telemetryQueue.ts
backend/src/controllers/: assetController.ts  attendanceController.ts  authController.ts  dashboardController.ts  departmentController.ts  deviceController.ts  documentController.ts  employeeController.ts  (+7 more)
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.tsx  index.css
scratch/: add_classifications_table.js  add_unique_constraint.js  apply_indexes.js  check_db.js  check_pam.js  clean_today.js  generate_test_suite.js  generate_uat_md.js  onboard_interns.js  run_all_hardening_tests.js  stress_test.js  test_agent_integration.js  uat_browser_intelligence.js  uat_desktop_agent.js  uat_device_trust.js  uat_enterprise_reports.js  uat_productivity_intelligence.js  uat_telemetry_engine.js  uat_test.js  uat_test_secure.js  uat_workforce_command_center.js  update_manager.js  update_pass.js  update_passwords.js
scratch/browser-extension/: background.js  manifest.json
scratch/desktop-agent-core/src-tauri/: Cargo.toml
scratch/desktop-agent-core/src-tauri/src/: browser_host.rs  hooks.rs  main.rs  power.rs  security.rs  tracker.rs
(+69 files in other folders)
