[package]
name = "desktop-agent-core"
version = "1.0.0"
description = "Enterprise Workforce Telemetry Native Monitoring Engine"
authors = ["Principal Software Architect"]
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
sysinfo = "0.29"
aes-gcm = "0.10"
aead = "0.5"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Security_Cryptography"
] }
